objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Producer_Partner__c</fullName>
        <label>Producer Partner</label>
        <picklist>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abilox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGRO 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajax Finechem / Lomb Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <description>Product Manager from the Product Object</description>
        <formula>Product__r.Product_Manager__r.FirstName  &amp; &quot; &quot; &amp;  Product__r.Product_Manager__r.LastName</formula>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tariff_Code__c</fullName>
        <description>The Product&apos;s Tariff Code.</description>
        <inlineHelpText>The product&apos;s Tariff Code in a 4.2.4 format.</inlineHelpText>
        <label>Product Tariff Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Top_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this product one of the Top 10 that Univar sells?</description>
        <label>Product Top 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regional_Top_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this one of the region&apos;s Top 10 products that Univar sells?</description>
        <label>Regional Top 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Accounts from Campaigns</description>
        <label>Related Account</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SellingTotalCommission__c</fullName>
        <formula>Quantity__c  *  Selling_Commision_per_UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Total Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Commision_per_UOM__c</fullName>
        <description>Selling price per Unit of Measure for the commission.</description>
        <inlineHelpText>Selling price per Unit of Measure for the commission.</inlineHelpText>
        <label>Selling Commission per UOM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_INCO_Terms__c</fullName>
        <description>CFR (Cost and Freight)
CIF (Cost, Insurance and Freight)
CIP (Carriage and Insurance Paid To)
CPT (Carriage Paid To)
DAP (Delivered at Place)
DAT (Delivered at Terminal)
DDP (Delivered Duty Paid)
EXW (Ex Works)
FAS (Free Alongside Ship)
FCA (Free Carrier)
FOB (Free On Board)</description>
        <inlineHelpText>CFR-Cost &amp; Freight
CIF-Cost, Ins. &amp; Freight
CIP-Carriage &amp; Ins. Paid To
CPT-Carriage Paid To
DAP-Delivered at Place
DAT-Delivered at Terminal
DDP-Delivered Duty Paid
EXW-Ex Works
FAS-Free Alongside Ship
FCA-Free Carrier
FOB-Free On Board</inlineHelpText>
        <label>Selling INCO Terms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Quantity__c</fullName>
        <formula>Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Subtotal_Amount__c</fullName>
        <formula>Quantity__c *  PriceperUOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Subtotal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Amount__c</fullName>
        <formula>Selling_Subtotal_Amount__c  +  Selling_Total_Freight__c  +  Selling_Total_Import_Fees__c  +  Selling_Total_Tariff__c +  SellingTotalCommission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Freight__c</fullName>
        <description>Total extended selling price of freight in specified currency.</description>
        <inlineHelpText>Total extended selling price of freight in specified currency.</inlineHelpText>
        <label>Selling Total Freight</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Import_Fees__c</fullName>
        <description>Total extended selling price of Import fees in currency specified.</description>
        <inlineHelpText>Total extended selling price of Import fees in currency specified.</inlineHelpText>
        <label>Selling Total Import Fees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Tariff__c</fullName>
        <description>Total extended selling price of tariff fees in currency specified.</description>
        <inlineHelpText>Total extended selling price of tariff fees in currency specified.</inlineHelpText>
        <label>Selling Total Tariff Fees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <label>Current Service Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Accuworx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aevitas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aimco Solrec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anachem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Harbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detox Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everest Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fielding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFL East (formerly Direct Line Env’l)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFL West (formerly Direct Line Env’l)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Thumb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H.D. Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kersol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacombe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader Petroleum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newalta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Resource Mgmt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panda Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <description>Ship To Number</description>
        <formula>Account.CustomerShipTo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Country__c</fullName>
        <label>Competitor&apos;s Source Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Region__c</fullName>
        <label>Competitor&apos;s Source Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specific_Use__c</fullName>
        <description>To match Specific Use on the Sample Request. and CPP.  Changed from Specific Use to &quot;Application&quot; per Shirley Schumacher, 9/7/10.</description>
        <label>Application</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDS_Assistance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technical Development Specialist or Product Manager Assigned to the Opportunity</description>
        <inlineHelpText>Technical Development Specialist or Product Manager Assigned to the Opportunity</inlineHelpText>
        <label>TDS / PM Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tank_Owner__c</fullName>
        <label>Tank Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Univar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tank_Size__c</fullName>
        <description>Size of Tank on site for the product.</description>
        <label>Tank Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Assistance__c</fullName>
        <inlineHelpText>If you feel assistance is required, please select one or more types of assistance.</inlineHelpText>
        <label>Type of Assistance</label>
        <picklist>
            <controllingField>Industry_Product_Assistance_Needed__c</controllingField>
            <picklistValues>
                <fullName>Market Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing/Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality/Regulatory</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Code__c</fullName>
        <label>UPC Product Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Description__c</fullName>
        <label>UPC Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Family__c</fullName>
        <formula>UPC_Product__r.Product_Family__c</formula>
        <label>UPC Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities (UPC Product)</relationshipLabel>
        <relationshipName>OpportunitiestoUPCProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USPOT_Insight_Type__c</fullName>
        <label>USPOT Insight Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Univar_Partner_TSDF__c</fullName>
        <label>Univar Partner TSDF</label>
        <picklist>
            <picklistValues>
                <fullName>ADVANCED WASTE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUZZI/UNICEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLEAN HARBORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMENNO/KERDOON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENVIRONMENTAL QUALITY (EQ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRR! GIANT RESOURCE RECOVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HERITAGE ENVIRNOMENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HERITAGE - WTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERGULF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KILN DIRECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KODAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-PURE WATERWORKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT  LISTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPUBLIC SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHODIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIDGELINE ENERGY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHAMROCK ENVIRONMENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIEMENS INDUSTRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTECH ENVIRONMENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEXAS MOLECULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRADEBE/UNITED ENVIRONMENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US ECOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEOLIA ENVIRONMENTAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEXOR TECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLS RECOVERY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASTE MANAGEMENT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Opportunity. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>